# monorepo

./: .dockerignore  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  Cargo.toml  README.md  TODO.md  babel.config.js  docker-compose.yml  lerna.json  package.json  tsconfig.json  yarnInstall.sh
.circleci/: config.yml
backend/: .babelrc  .dockerignore  .eslintignore  .eslintrc  .eslintrc.js  .graphqlconfig  .wotanrc.yaml  CHANGELOG.md  Dockerfile  babel.config.js  dev.Dockerfile  index.ts  jest.config.js  nodemon.json  package-lock.json  package.json  prod.Dockerfile  tsconfig.json  typeGen.yml  webpack.config.js
backend/.devcontainer/: devcontainer.json
backend/@types/: ext-association.d.ts  ignored.d.ts  (+1 more)
common/: index.ts
frontend/: .babelrc  .editorconfig  .eslintignore  .eslintrc  .eslintrc.js  .fimbullinter.yaml  .gitignore  .lintstagedrc  .stylelintignore  .stylelintrc  .vuestylelintrc  .wotanrc.yaml  CHANGELOG.md  Dockerfile  apollo.config.js  babel.config.js  dev.Dockerfile  gulpfile.babel.js  icon-gen.js  jest.config.js  mock.json  next.config.js  nodemon.json  package.json  prod.Dockerfile  schema.json  tsconfig-for-webpack-config.json  tsconfig.json  webpack.config.ts  yarn.lock_backup
mobile/: .eslintrc  babel.config.js  package.json  webpack.config.js
proxy/: nginx.conf
rust-backend/: .editorconfig  Cargo.toml  dev.Dockerfile
rust-backend/src/: main.rs  routes.rs
rust-backend/src/graphql_service/: get_graphql_service.rs  mod.rs  post_graphql_service.rs
rust-backend/src/graphql_service/users/: mod.rs  schema.rs
traefik/: traefik.toml
(+242 files in other folders)
