[package]
name = "tide"
version = "0.1.0"
authors = ["Majedul Hoque <rumanbsl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.3.0"
juniper = "0.14.1"
http = "0.1.19"
http-service = "0.3.1"
mongodb = { version = "0.4.0", features = ["ssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
dotenv="0.15.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
